# aranya

./: .clang-format  .gitignore  .pre-commit-config.yaml  404.md  AGENTS.md  CLAUDE.md  CMakeLists.txt  CONTRIBUTING.md  Cargo.toml  Makefile.toml  README.md  SECURITY.md  Status.md  TRADEMARK.md  _config.yml  _typos.toml  atom.xml  cargo-watch  classes.html  clippy.toml  deny.toml  dir_cf6d034fbb8a82be17b39265b6ed736a.html  external-types.txt  files.html  functions.html  globals_type.html  index.html  public-api.txt  release-plz.toml  rust-toolchain.toml  rustfmt.toml  structAranyaAfcConfig.html  structAranyaClient.html  structAranyaClientConfig.html  structAranyaKeyBundle.html  structAranyaTeamId.html  taplo.toml
crates/aranya-certgen/: Cargo.toml  README.md
crates/aranya-certgen/src/: cert.rs  error.rs  lib.rs  main.rs
crates/aranya-certgen/tests/: cert_tests.rs
crates/aranya-client/: Cargo.toml  README.md
crates/aranya-client-capi/: CMakeLists.txt  Cargo.toml  Doxyfile  README.md  build.rs  cbindgen.toml  rustfmt.toml
crates/aranya-client-capi/ctest/: .clang-format  .gitignore  CMakeLists.txt  README.md  execute_test.sh  run_test_with_cleanup.sh  test_afc.c  test_client.c  test_datatypes.c  test_onboarding.c  test_query.c  test_simple.c  test_sync.c  test_team.c  test_timeout.c
crates/aranya-client-capi/ctest/include/: utils.h
crates/aranya-client-capi/docs/static/: mainpage.md
crates/aranya-client-capi/output/: aranya-client.h
crates/aranya-client-capi/pages/: mainpage.md
crates/aranya-client-capi/src/: lib.rs  lock.rs
crates/aranya-client-capi/src/api/: .gitignore  defs.rs  mod.rs
crates/aranya-client-capi/src/imp/: afc.rs  aqc.rs  client.rs  cmd.rs  config.rs  error.rs  label.rs  mod.rs  op.rs  perm.rs  role.rs
crates/aranya-client/src/: afc.rs  afc_tests.rs  aqc.rs  aqc_net.rs  client.rs  config.rs  error.rs  lib.rs  prelude.rs  sync.rs  tests.rs  trace.rs  util.rs
crates/aranya-client/src/aqc/: api.rs  crypto.rs  mod.rs  net.rs
crates/aranya-client/src/client/: client.rs  device.rs  label.rs  net_id.rs  object.rs  perm.rs  role.rs  team.rs
crates/aranya-client/src/config/: team.rs
crates/aranya-client/src/tests/: afc.rs  client.rs  common.rs  mod.rs
crates/aranya-client/tests/: afc.rs  aqc.rs  push_sync.rs  ring_convergence.rs  tests.rs  trace_tests.rs  unstable_apis.rs
crates/aranya-client/tests/common/: mod.rs
crates/aranya-client/tests/ring/: convergence.rs  init.rs  metrics.rs  mod.rs  propagation.rs  team.rs  topology.rs
crates/aranya-client/tests/scale/: convergence.rs  init.rs  metrics.rs  mod.rs  ring.rs  team.rs  topology.rs
crates/aranya-daemon/: Cargo.toml  README.md  build.rs  example.json  example.toml
crates/aranya-daemon-api/: CHANGELOG.md  Cargo.toml  README.md
crates/aranya-daemon-api/src/: crypto.rs  lib.rs  service.rs
crates/aranya-daemon-api/src/crypto/: keys.rs  mod.rs  txp.rs
crates/aranya-daemon-api/src/service/: afc.rs  aqc.rs  quic_sync.rs
crates/aranya-daemon/benches/: metrics.rs
crates/aranya-daemon/src/: actions.rs  addr.rs  afc.rs  api.rs  aqc.rs  aranya.rs  config.rs  daemon.rs  keys.rs  keystore.rs  lib.rs  main.rs  observability.rs  policy.md  policy.rs  sync.rs  test.rs  trace.rs  util.rs  vm_policy.rs
crates/aranya-daemon/src/api/: quic_sync.rs
crates/aranya-daemon/src/config/: enable.rs  toggle.rs
crates/aranya-daemon/src/sync/: actions.rs  client.rs  handle.rs  hello.rs  manager.rs  mod.rs  prot.rs  protocol.rs  quic.rs  server.rs  task.rs  tcp.rs  types.rs
crates/aranya-daemon/test-util/: Cargo.toml
crates/aranya-daemon/test-util/src/: lib.rs
crates/aranya-daemon/test_configs/: disabled_quic_sync.json  example.json  missing_quic_sync.json
crates/aranya-daemon/tests/: tests.rs
crates/aranya-example/: Cargo.toml  README.md
crates/aranya-example/src/: main.rs
crates/aranya-keygen/: CHANGELOG.md  Cargo.toml  README.md
crates/aranya-keygen/src/: keygen.rs  lib.rs
crates/aranya-metrics/: Cargo.toml  README.md  example-metrics.toml  example.hjson  metrics.toml  prometheus.bash  prometheus.toml  prometheus.yml  run.bash
crates/aranya-metrics/src/: harness.rs  lib.rs  main.rs
crates/aranya-metrics/src/backend/: datadog.rs  mod.rs  prometheus.rs  tcp_server.rs
crates/aranya-metrics/src/export/: mod.rs  prometheus.rs
crates/aranya-util/: CHANGELOG.md  Cargo.toml  README.md
crates/aranya-util/src/: addr.rs  error.rs  lib.rs  ready.rs  rustls.rs  s2n_quic.rs  shm.rs  task.rs  tls.rs  util.rs
crates/client/: Cargo.toml
crates/client/src/: client.rs  error.rs
crates/client/tests/: tests.rs
crates/daemon/: Cargo.toml  build.rs  example.json
crates/daemon-api/: Cargo.toml
crates/daemon-api/src/: service.rs
crates/daemon/src/: addr.rs  api.rs  aranya.rs  config.rs  daemon.rs  lib.rs  main.rs  policy.md  policy.rs  sync.rs  vm_policy.rs
crates/daemon/test-util/: Cargo.toml
crates/daemon/test-util/src/: lib.rs
crates/daemon/tests/: tests.rs
crates/keygen/: Cargo.toml
crates/keygen/src/: keygen.rs  lib.rs
crates/transport/: Cargo.toml
crates/transport/src/: lib.rs
crates/transport/src/quic/: client.rs  mod.rs  server.rs  tests.rs
crates/transport/src/tcp/: client.rs  mod.rs  server.rs  tests.rs
docs/: index.md  (+5 more)
examples/c/: .gitignore  CMakeLists.txt  README.md  example.bash  example.c  run.bash
examples/c/cmake/: AranyaConfig.cmake
examples/c/configs/: admin-config.json  membera-config.json  memberb-config.json  operator-config.json  owner-config.json
examples/rust/: .gitignore  Cargo.toml  README.md  cargo-generate.toml  run.bash
examples/rust/aranya-example/: Cargo.toml  README.md  run.bash
examples/rust/aranya-example-common/: Cargo.toml
examples/rust/aranya-example-multi-node/: Cargo.toml  README.md  example.env  run.bash
examples/rust/aranya-example-onboarding/: Cargo.toml  README.md  example.env  onboarding.env  run.bash
examples/rust/files/: Cargo.toml  README.md  send_file.sh
examples/rust/src/: main.rs
templates/aranya-example/: .gitignore.liquid  Cargo.toml  README.md
templates/aranya-example/src/: main.rs
(+532 files in other folders)
