[workspace]
resolver = "2"

members = [
    "crates/*",
]


[workspace.package]
authors = ["SpiderOak, Inc."]
edition = "2021"
license = "AGPL-3.0-only"
repository = "https://github.com/aranya-project/aranya"
rust-version = "1.80"


[workspace.lints.rust]
# missing_docs = "warn"
rust_2018_idioms = { level = "warn", priority = -1 }
unsafe_op_in_unsafe_fn = "warn"
unused_lifetimes = "warn"
unused_qualifications = "warn"


[workspace.lints.clippy]
cast_lossless = "warn"
cast_possible_wrap = "warn"
cast_precision_loss = "warn"
cast_sign_loss = "warn"
panic = "warn"
unsafe_derive_deserialize = "warn"
undocumented_unsafe_blocks = "warn"
unwrap_used = "warn"
wildcard_imports = "warn"

[workspace.dependencies]
aranya-afc-util = { version = "0.3.0", features = ["alloc"] }
aranya-base58 = { version = "0.1.0" }
aranya-buggy = { version = "0.1.0" }
aranya-crypto = { version = "0.2.1", features = ["alloc", "fs-keystore", "clone-aead", "std"] }
aranya-crypto-ffi = { version = "0.3.0" }
aranya-device-ffi = { version = "0.3.0" }
aranya-envelope-ffi = { version = "0.3.0" }
aranya-fast-channels = { version = "0.3.0", features = ["posix", "std", "memory"] }
aranya-idam-ffi = { version = "0.3.0" }
aranya-libc = { version = "0.1.0" }
aranya-perspective-ffi = { version = "0.3.0" }
aranya-policy-compiler = { version = "0.3.0" }
aranya-policy-ifgen = { version = "0.3.1", features = ["serde"] }
aranya-policy-ifgen-build = { version = "0.1.0" }
aranya-policy-lang = { version = "0.1.0" }
aranya-policy-vm = { version = "0.3.0", features = ["std"] }
aranya-runtime = { version = "0.3.0", features = ["std", "libc"] }

aranya-client = { version = "0.3.0", path = "crates/aranya-client" }
aranya-daemon = { version = "0.3.0", path = "crates/aranya-daemon" }
aranya-daemon-api = { version = "0.3.1", path = "crates/aranya-daemon-api" }
aranya-keygen = { version = "0.1.1", path = "crates/aranya-keygen" }
aranya-util = { version = "0.1.1", path = "crates/aranya-util" }

anyhow = { version = "1.0.86" }
ciborium = { version = "0.2" }
clap = { version = "4", features = ["derive"] }
futures-util = { version = "0.3.30" }
libc = { version = "0.2" }
postcard = { version = "1", default-features = false, features = ["use-std", "heapless", "experimental-derive"] }
pretty_assertions = { version = "1.4" }
serde = "1"
serial_test = { version = "3" }
tarpc = { version = "0.35.0", features = ["unix", "serde-transport", "serde-transport-json"] }
tempfile = { version = "3.6.0" }
test-log = { version = "0.2.14", default-features = false, features = ["trace"] }
thiserror = { version = "2.0" }
tokio = { version = "1.40" }
tokio-util = { version = "0.7.12" }
tracing = { version = "0.1.40" }
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }


[profile.dev]
opt-level = 1

[profile.release]
lto = true
opt-level = "z"
strip = true
