[workspace]
resolver = "2"

members = [
    "crates/*",
    "examples/rust/*",
]


[workspace.package]
version = "4.0.0"
authors = ["SpiderOak, Inc."]
edition = "2021"
license = "AGPL-3.0-only"
repository = "https://github.com/aranya-project/aranya"
rust-version = "1.85"


[workspace.lints.rust]
# missing_docs = "warn"
missing_debug_implementations = "warn"
rust_2018_idioms = { level = "warn", priority = -1 }
unsafe_op_in_unsafe_fn = "warn"
unused_lifetimes = "warn"
unused_qualifications = "warn"

[workspace.lints.clippy]
cast_lossless = "warn"
cast_possible_wrap = "warn"
cast_precision_loss = "warn"
cast_sign_loss = "warn"
panic = "warn"
unsafe_derive_deserialize = "warn"
undocumented_unsafe_blocks = "warn"
unwrap_used = "warn"
wildcard_imports = "warn"

[workspace.dependencies]
aranya-fast-channels = { path = "../aranya-core/crates/aranya-fast-channels", features = ["alloc"] }
aranya-afc-util = { path = "../aranya-core/crates/aranya-afc-util", features = ["alloc"] }
aranya-capi-core = { path = "../aranya-core/crates/aranya-capi-core" }
aranya-capi-codegen = { path = "../aranya-core/crates/aranya-capi-codegen" }
aranya-crypto = { path = "../aranya-core/crates/aranya-crypto", features = ["alloc", "fs-keystore", "clone-aead", "std", "tls"] }
aranya-crypto-ffi = { path = "../aranya-core/crates/aranya-crypto-ffi" }
aranya-device-ffi = { path = "../aranya-core/crates/aranya-device-ffi" }
aranya-envelope-ffi = { path = "../aranya-core/crates/aranya-envelope-ffi" }
aranya-id = { path = "../aranya-core/crates/aranya-id" }
aranya-idam-ffi = { path = "../aranya-core/crates/aranya-idam-ffi" }
aranya-perspective-ffi = { path = "../aranya-core/crates/aranya-perspective-ffi" }
aranya-policy-compiler = { path = "../aranya-core/crates/aranya-policy-compiler" }
aranya-policy-ifgen = { path = "../aranya-core/crates/aranya-policy-ifgen", features = ["serde"] }
aranya-policy-ifgen-build = { path = "../aranya-core/crates/aranya-policy-ifgen-build" }
aranya-policy-lang = { path = "../aranya-core/crates/aranya-policy-lang" }
aranya-policy-text = { path = "../aranya-core/crates/aranya-policy-text" }
aranya-policy-vm = { path = "../aranya-core/crates/aranya-policy-vm", features = ["std"] }
aranya-runtime = { path = "../aranya-core/crates/aranya-runtime", features = ["std", "libc"] }

buggy = { version = "0.1.0" }
spideroak-base58 = { version = "0.2.0" }

aranya-client = { version = "4.0.0", path = "crates/aranya-client", default-features = false }
aranya-daemon = { version = "4.0.0", path = "crates/aranya-daemon", default-features = false }
aranya-daemon-api = { version = "4.0.0", path = "crates/aranya-daemon-api", default-features = false }
aranya-keygen = { version = "4.0.0", path = "crates/aranya-keygen", default-features = false }
aranya-util = { version = "4.0.0", path = "crates/aranya-util", default-features = false }

# External dependencies
anyhow = { version = "1.0.86" }
backon = { version = "1.2.0" }
bytes = { version = "1.10.0" }
ciborium = { version = "0.2" }
clap = { version = "4", features = ["derive"] }
derive-where = { version = "1" }
divan = { version = "0.1", default-features = false }
futures-util = { version = "0.3.30" }
http = { version = "1" }
libc = { version = "0.2" }
metrics = { version = "0.24" }
metrics-util = { version = "0.20" }
postcard = { version = "1", default-features = false, features = ["use-std", "heapless", "experimental-derive"] }
pretty_assertions = { version = "1.4" }
rustix = { version = "1.1.2", features = ["shm"] }
s2n-quic = { version = "1.58.0-psk.2", default-features = false, features = ["provider-address-token-default", "provider-tls-rustls"], package = "aranya-internal-s2n-quic" }
semver = { version = "1", features = ["serde"] }
serde = "1"
serial_test = { version = "3" }
sysinfo = { version = "0.36" }
tarpc = { version = "0.35.0", features = ["unix", "serde-transport", "serde-transport-json"] }
tempfile = { version = "3.17.1" }
test-log = { version = "0.2.14", default-features = false, features = ["trace"] }
thiserror = { version = "2.0" }
tokio = { version = "1.44" }
tokio-util = { version = "0.7.12" }
toml = { version = "0.9", default-features = false, features = ["std", "serde", "parse"] }
tracing = { version = "0.1.40" }
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }

[profile.dev]
opt-level = 1

[profile.release]
opt-level = "z"
strip = true
lto = true
panic = "abort"

[workspace.metadata.release]
allow-branch = ["main"]
shared-version = true
tag-message = ""
tag-prefix = ""
