[package]
name = "aranya-certgen"
description = "Library and CLI tool for generating root CA certificates and signed certificates using P-256 ECDSA"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
publish = false

[lib]
name = "aranya_certgen"
path = "src/lib.rs"

[[bin]]
name = "aranya-certgen"
path = "src/main.rs"

[dependencies]
clap = { workspace = true }
thiserror = { workspace = true }

rcgen = { workspace = true }
time = "0.3"

[lints]
workspace = true
