[package]
name = "aranya-certgen"
description = "Library and CLI tool for generating root CA certificates and signed certificates using P-256 ECDSA"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[lib]
name = "aranya_certgen"
path = "src/lib.rs"

[[bin]]
name = "aranya-certgen"
path = "src/main.rs"
required-features = ["cli"]

[features]
cli = ["dep:clap"]
default = []

[dependencies]
clap = { workspace = true, optional = true }
rcgen = { version = "0.14", features = ["x509-parser", "zeroize"] }
thiserror = { workspace = true }
time = "0.3"
zeroize = "1"

[dev-dependencies]
tempfile = { workspace = true }
x509-parser = "0.18"

[lints]
workspace = true
