[package]
name = "aranya-client-capi"
description = "C API for the aranya-client library"
publish = false
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true


[lints]
workspace = true


[lib]
crate-type = ["rlib", "cdylib"]
doctest = false


[features]
default = []


[dependencies]
aranya-client = { workspace = true }
aranya-daemon-api = { workspace = true }
aranya-util = { workspace = true }

aranya-capi-core = { workspace = true }
aranya-crypto = { workspace = true }
buggy = { workspace = true }

anyhow = { workspace = true }
bytes = { workspace = true }
postcard = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }


[build-dependencies]
aranya-capi-codegen = { workspace = true }

anyhow = { workspace = true }
quote = "1"
syn = "2"