[package]
name = "aranya-client"
description = "Client library for using Aranya"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true


[lints]
workspace = true


[features]
default = [
    "afc",
    "aranya-daemon-api/default",
]

# Enable debugging.
debug = []

# Preview features
preview = ["aranya-daemon-api/preview"]
# Aranya Fast Channels
afc = ["aranya-daemon-api/afc", "dep:aranya-fast-channels"]

# Experimental features
experimental = ["aranya-daemon-api/experimental"]


[dependencies]
aranya-daemon-api = { workspace = true, default-features = false }
aranya-fast-channels = { workspace = true, optional = true }
aranya-id = { workspace = true }
aranya-policy-text = { workspace = true }
aranya-util = { workspace = true }

anyhow = { workspace = true }
aranya-crypto = { workspace = true }
buggy = { workspace = true, features = ["std"] }
derive-where = { workspace = true }
futures-util = { workspace = true }
serde = { workspace = true, features = ["derive"] }
tarpc = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["io-util", "macros", "net", "rt-multi-thread", "sync"] }
tracing = { workspace = true }


[dev-dependencies]
aranya-certgen = { workspace = true }
aranya-client = { path = ".", features = ["preview"] }
aranya-daemon = { path = "../aranya-daemon", features = ["experimental", "preview"] }
spideroak-base58 = { workspace = true }

backon = { workspace = true }
futures-util = { workspace = true }
serial_test = { workspace = true }
tempfile = { workspace = true }
test-log = { workspace = true }


[[test]]
name = "tests"
path = "tests/tests.rs"


[package.metadata.cargo-all-features]
always_include_features = [
    "default", # TODO: remove in #448
    "experimental",
    "preview",
]
