[package]
name = "aranya-daemon-api"
description = "IPC API between the Aranya client and daemon"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true


[lints]
workspace = true

[features]
unstable = []

[dependencies]
aranya-crypto = { workspace = true }
aranya-policy-text = { workspace = true }
aranya-util = { workspace = true }
buggy = { workspace = true }

anyhow = { workspace = true }
bytes = { workspace = true, features = ["serde"] }
ciborium = { workspace = true }
futures-util = { workspace = true }
pin-project = { version = "1.1" }
semver = { workspace = true }
serde = { workspace = true }
tarpc = { workspace = true }
tokio = { workspace = true }
tokio-serde = { version = "0.9", features = ["messagepack"] }

[dev-dependencies]
backon = { workspace = true }
postcard = { workspace = true }
tempfile = { workspace = true }
test-log = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt", "rt-multi-thread"] }
