[package]
name = "aranya-daemon-api"
description = "IPC API between the Aranya client and daemon"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true


[lints]
workspace = true


[features]
default = ["afc"]

# Preview features
preview = []
# Test-only utilities
test-utils = []
# Aranya Fast Channels
afc = ["dep:aranya-fast-channels"]

# Experimental features
experimental = []


[dependencies]
aranya-util = { workspace = true }

aranya-crypto = { workspace = true }
aranya-fast-channels = { workspace = true, features = ["alloc", "posix", "libc"], optional = true }
aranya-id = { workspace = true }
aranya-policy-text = { workspace = true }
buggy = { workspace = true }

anyhow = { workspace = true }
bytes = { workspace = true, features = ["serde"] }
ciborium = { workspace = true }
futures-util = { workspace = true }
postcard = { workspace = true }
semver = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true, features = ["codec"] }
tracing = { workspace = true }


[dev-dependencies]
backon = { workspace = true }
postcard = { workspace = true }
tempfile = { workspace = true }
test-log = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt", "rt-multi-thread"] }
tokio-stream = { workspace = true, features = ["net"] }


[package.metadata.cargo-all-features]
always_include_features = ["experimental", "preview"]
