[package]
name = "aranya-example"
description = "Example Rust program using the Aranya client library"
version = "0.1.0"
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[dependencies]
aranya-client = { workspace = true }
aranya-daemon = { workspace = true }

aranya-buggy = { workspace = true, features = ["std"] }
aranya-daemon-api = { workspace = true }
aranya-fast-channels = { workspace = true, features = ["std", "posix"] }
aranya-util = { workspace = true }

anyhow = { workspace = true }
backon = { workspace = true }
tempfile = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["io-util", "macros", "net", "sync"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
