[package]
name = "aranya-keygen"
description = "Utilities for generating crypto keys"
version = "0.1.1"
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true


[lints]
workspace = true


[dependencies]
aranya-crypto = { workspace = true, features = ["fs-keystore"] }

anyhow = { workspace = true }
serde = { workspace = true, features = ["derive"] }
