[package]
name = "aranya-metrics"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[features]
default = []

[dependencies]
aranya-client = { workspace = true }
aranya-daemon-api = { workspace = true }
aranya-util = { workspace = true }
buggy = { workspace = true }

anyhow = { workspace = true }
backon = { workspace = true }
bytes = { workspace = true }
deser-hjson = { version = "2" }
futures-util = { workspace = true }
libc = { workspace = true }
metrics = { workspace = true }
metrics-exporter-prometheus = { version = "0.17", features = ["uds-listener"] }
metrics-util = { workspace = true }
serde = { workspace = true }
sysinfo = { workspace = true }
tempfile = { workspace = true }
tokio = { workspace = true, features = ["process"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
url = { workspace = true }
