[package]
name = "aranya-metrics"
publish = false
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[features]
default = []

[dependencies]
aranya-client = { workspace = true }
aranya-daemon-api = { workspace = true }
aranya-util = { workspace = true }
buggy = { workspace = true }

anyhow = { workspace = true }
backon = { workspace = true }
bytes = { workspace = true }
deser-hjson = { version = "2" }
futures-util = { workspace = true }
http = { workspace = true }
libc = { workspace = true }
metrics = { workspace = true }
metrics-exporter-dogstatsd = { version = "0.9" }
metrics-exporter-prometheus = { version = "0.17", features = ["uds-listener"] }
metrics-exporter-tcp = { version = "0.11" }
metrics-util = { workspace = true }
serde = { workspace = true }
sysinfo = { workspace = true }
tempfile = { workspace = true }
tokio = { workspace = true, features = ["process"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
